tests/bad/generic-entangle.q
fun main () : (qubit & qubit)<'a> =
    entangle<'a>(qinit (), qinit ())
